--- a/guide/guide.html
+++ b/guide/guide.html
@@ -1,1 +1,12 @@
-<a href="./Lab1_GUIDE.pdf" target="_blank">PDF.</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guide</title>
+</head>
+<body>
+    <h1>PDF Guide</h1>
+    <iframe src="./Lab1_GUIDE.pdf" width="100%" height="600px" style="border: none;"></iframe>
+</body>
+</html>
